hphp/hack/test/typecheck/unsafe_block2.php.exp
File "unsafe_block2.php", line 7, characters 10-13:
Invalid return type (Typing[4110])
File "unsafe_block2.php", line 3, characters 15-17:
Expected int
File "unsafe_block2.php", line 7, characters 10-13:
But got string
